[package]
name = "indicatif_file"
version = "0.1.1"
edition = "2021"
license = "Unlicense"
description = "Use indicatif for writing files."
repository = "https://github.com/romw314/ind-file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
indicatif = "0.17.7"
